# litewolf

./: .gitignore  LICENSE.md  README.md  flake.nix  logfile  pyproject.toml
litewolf/: api.py  dash.py  exit.py  logger.py  main.py
static/: extra.css  global.css  login.css  style-error.css
templates/: app.html  app.j2  error.html  error.j2  home.html  home.j2  login.html  login.j2  signin.html  signin.j2
templates/components/: error.j2  footer.j2  loginbox.j2  signin.j2
templates/components/app/: dashboard.j2  header.j2  monitor.j2  navbar.j2  settings.j2  sidebar.j2
templates/components/launch/: features.j2  footer.j2  header.j2  hero.j2  nav.j2  qs.j2
